<resources>
    <string name="app_name">MBNMovil</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="olvido_contrasena">Olvidé mi contraseña</string>
    <string name="viajes">Viajes</string>
    <string name="reservaciones">Reservaciones</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="email_error">Dirección de correo inválida</string>
    <string name="title_activity_registrar_usuario">RegistrarUsuario</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="ingrese_correo_electronico">Ingrese correo electrónico</string>
    <string name="aceptar">Aceptar</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="repita_contrasena">Repita su contraseña</string>
    <string name="btn_guardar">Guardar</string>
    <string name="procesando">Procesando</string>
    <string name="cargando">Cargando, por favor espere...</string>
    <string name="mensaje_cambio_contrasena">Se enviará un correo electrónico con las instrucciones para el cambio de contraseña.</string>
    <string name="rellenar_campos">Complete los campos</string>
    <string name="contrasena_no_coincide">Las contraseñas no coinciden</string>
</resources>
