<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:orientation="vertical"
    tools:context="com.mbn.movil.view.impl.ActualizarContrasenaActivity">


    <LinearLayout
        android:id="@+id/imgGente"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@drawable/gente" >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="66dp"
            android:src="@drawable/logo1"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/cambiar_contrasena"
            android:textSize="32sp"
            android:textColor="@color/primary_text"
            android:id="@+id/cambio"/>

        <LinearLayout
            style="@style/LinearLayoutLogin"
            android:layout_below="@+id/cambio"
            android:id="@+id/usrLayout">

            <TextView style="@style/EmptyTextEdit"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/EditTextLogin"
                android:hint="@string/nueva_contrasena"
                android:inputType="textPassword"
                android:id="@+id/nuevoPass"
                android:drawableLeft="@drawable/icono_contrasena_selector"
                app:met_floatingLabelText="@string/nueva_contrasena" />

            <TextView style="@style/EmptyTextEdit"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutLogin"
            android:layout_below="@+id/usrLayout"
            android:id="@+id/pwdLayout">

            <TextView style="@style/EmptyTextEdit"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/EditTextLogin"
                android:hint="@string/repita_contrasena"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/icono_contrasena_selector"
                app:met_floatingLabelText="@string/contrasena"
                android:id="@+id/contrasena"/>

            <TextView style="@style/EmptyTextEdit"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutLogin"
            android:layout_below="@+id/pwdLayout"
            android:id="@+id/btnLayout">

            <TextView style="@style/EmptyTextEdit"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:id="@+id/btnActPass"
                android:text="@string/btn_guardar"
                android:background="@color/primary_light"/>
            <TextView style="@style/EmptyTextEdit"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
