<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:orientation="vertical"
    tools:context="com.mbn.movil.view.impl.MainActivity">

    <LinearLayout
        android:id="@+id/imgGente"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@drawable/gente" >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="66dp"
            android:src="@drawable/logo1"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/iniciar_sesion"
            android:textSize="32sp"
            android:textColor="@color/primary_text"
            android:id="@+id/iniciarSesion"/>

        <LinearLayout
            style="@style/LinearLayoutLogin"
            android:layout_below="@+id/iniciarSesion"
            android:id="@+id/usrLayout">

            <TextView style="@style/EmptyTextEdit"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/EditTextLogin"
                android:hint="@string/usuario"
                android:inputType="textEmailAddress"
                android:id="@+id/usuario"
                android:drawableLeft="@drawable/icono_usuario_selector"
                app:met_floatingLabelText="@string/usuario" />

            <TextView style="@style/EmptyTextEdit"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutLogin"
            android:layout_below="@+id/usrLayout"
            android:id="@+id/pwdLayout">

            <TextView style="@style/EmptyTextEdit"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/EditTextLogin"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/icono_contrasena_selector"
                app:met_floatingLabelText="@string/contrasena" />

            <TextView style="@style/EmptyTextEdit"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutLogin"
            android:layout_below="@+id/pwdLayout"
            android:id="@+id/btnLayout">

            <TextView style="@style/EmptyTextEdit"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:id="@+id/btnIniciarSesion"
                android:text="@string/iniciar_sesion"
                android:background="@color/primary_light"/>
            <TextView style="@style/EmptyTextEdit"/>
        </LinearLayout>

        <RelativeLayout
            style="@style/LinearLayoutLogin"
            android:layout_alignParentBottom="true"
            android:id="@+id/links"
            android:padding="3dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/account_plus_naranja"
                android:clickable="true"
                android:textAlignment="center"
                android:paddingLeft="10dp"
                android:text="@string/registrarme"
                android:id="@+id/linkRegistrarme"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/key_remove_naranja"
                android:clickable="true"
                android:textAlignment="center"
                android:paddingRight="10dp"
                android:text="@string/olvido_contrasena"
                android:id="@+id/linkOlvido"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>